<resources>
    <string name="app_name">MABOOK</string>
    <string name="search_info_msg">검색어를 입력하세요</string>
    <string name="search">검색</string>
    <string name="book_image">도서 이미지</string>
    <string name="search_total">%s 검색 결과 %d 건</string>
    <string name="dialog_info">안내</string>
    <string name="dialog_ok">확인</string>
    <string name="title">제목</string>
    <string name="author">저자</string>
    <string name="publisher">출판</string>
    <string name="pubdate">출간</string>
    <string name="price">가격</string>
    <string name="price_won">%s원</string>
    <string name="description">책소개</string>
    <string name="finish_info">뒤로 버튼을 한 번 더 누르면 종료됩니다.</string>
    <string name="not_found_description">등록된 책 소개가 없습니다.</string>
    <string name="link">보러가기&#160;&#160;〉</string>
    <string name="splash">스플래시</string>
</resources>