<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ToolbarTheme"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="24dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/book_image"
                app:layout_constraintBottom_toTopOf="@id/tv_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tv_title_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/gray"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_title"
                app:layout_constraintEnd_toStartOf="@id/tv_title"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="@id/iv_image"
                app:layout_constraintTop_toTopOf="@id/tv_title" />

            <TextView
                android:id="@+id/tv_author_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textColor="@color/gray"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_author"
                app:layout_constraintEnd_toEndOf="@id/tv_title_info"
                app:layout_constraintStart_toStartOf="@id/tv_title_info"
                app:layout_constraintTop_toTopOf="@id/tv_author" />

            <TextView
                android:id="@+id/tv_publisher_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/publisher"
                android:textColor="@color/gray"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_publisher"
                app:layout_constraintEnd_toEndOf="@id/tv_title_info"
                app:layout_constraintStart_toStartOf="@id/tv_title_info"
                app:layout_constraintTop_toTopOf="@id/tv_publisher" />

            <TextView
                android:id="@+id/tv_pub_date_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pubdate"
                android:textColor="@color/gray"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_pub_date"
                app:layout_constraintEnd_toEndOf="@id/tv_title_info"
                app:layout_constraintStart_toStartOf="@id/tv_title_info"
                app:layout_constraintTop_toTopOf="@id/tv_pub_date" />

            <TextView
                android:id="@+id/tv_price_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@color/gray"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_discount"
                app:layout_constraintEnd_toEndOf="@id/tv_title_info"
                app:layout_constraintStart_toStartOf="@id/tv_title_info"
                app:layout_constraintTop_toTopOf="@id/tv_discount" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tv_author"
                app:layout_constraintEnd_toEndOf="@id/iv_image"
                app:layout_constraintHorizontal_weight="3"
                app:layout_constraintStart_toEndOf="@id/tv_title_info"
                app:layout_constraintTop_toBottomOf="@id/iv_image" />

            <TextView
                android:id="@+id/tv_author"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/tv_publisher"
                app:layout_constraintEnd_toEndOf="@id/tv_title"
                app:layout_constraintStart_toEndOf="@id/tv_author_info"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <TextView
                android:id="@+id/tv_publisher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/tv_pub_date"
                app:layout_constraintEnd_toEndOf="@+id/tv_title"
                app:layout_constraintStart_toStartOf="@id/tv_author"
                app:layout_constraintTop_toBottomOf="@+id/tv_author" />

            <TextView
                android:id="@+id/tv_pub_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/tv_discount"
                app:layout_constraintEnd_toEndOf="@+id/tv_title"
                app:layout_constraintStart_toStartOf="@id/tv_author"
                app:layout_constraintTop_toBottomOf="@id/tv_publisher" />

            <TextView
                android:id="@+id/tv_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/view_divider"
                app:layout_constraintEnd_toStartOf="@id/tv_price"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@id/tv_author"
                app:layout_constraintTop_toBottomOf="@id/tv_pub_date"
                tools:text="할인가" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:gravity="center"
                android:textColor="@color/gray"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_discount"
                app:layout_constraintEnd_toStartOf="@+id/tv_discount_rate"
                app:layout_constraintStart_toEndOf="@id/tv_discount"
                app:layout_constraintTop_toTopOf="@id/tv_discount"
                tools:text="정가" />

            <TextView
                android:id="@+id/tv_discount_rate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:textColor="@color/colorAccent"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_discount"
                app:layout_constraintStart_toEndOf="@id/tv_price"
                app:layout_constraintTop_toTopOf="@id/tv_discount"
                tools:text="할인율" />

            <View
                android:id="@+id/view_divider"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:background="@color/shadowColor"
                app:layout_constraintBottom_toTopOf="@id/tv_description_info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_discount" />

            <TextView
                android:id="@+id/tv_description_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/description"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tv_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_divider" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="45dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/btn_link"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_description_info" />

            <Button
                android:id="@+id/btn_link"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/shadowColor"
                android:text="@string/link"
                android:textColor="@color/textColor"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="보러가기" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>